Rename pgdb env variables to postgres

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # rabbitmq
-RABBITMQ_USER=guest
-RABBITMQ_PASSWORD=guest
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=Qwerty1@
 
 # postgres
-PGDB_USER=admin
-PGDB_PASSWORD=Qwerty1@
-PGDB_NAME=pgdb
-PGDB_BACKUP_DIR=C:/ProgramData/docker/postgres-pgdb-backups
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=Qwerty1@
+POSTGRES_NAME=mozart
+POSTGRES_BACKUP_DIR=C:/ProgramData/docker/postgres-backups
 # connection string = "Host=localhost; Port=5433; Username=admin; Password=Qwerty1@; Database=pgdb;"
 
 # pgadmin
