--- a/postgres.yml
+++ b/postgres.yml
@@ -1,23 +1,23 @@
 services:
-  pgdb:
+  postgres:
     image: postgres:16.3
     restart: unless-stopped
     ports:
       - "5433:5432"
     environment:
-      - POSTGRES_USER=${PGDB_USER}
-      - POSTGRES_PASSWORD=${PGDB_PASSWORD}
-      - POSTGRES_DB=${PGDB_NAME}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_NAME}
     volumes:
-      - pgdb_data:/var/lib/postgresql/data
-      - ${PGDB_BACKUP_DIR}:/var/lib/postgresql/backups
+      - postgres_data:/var/lib/postgresql/data
+      - ${POSTGRES_BACKUP_DIR}:/var/lib/postgresql/backups
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${PGDB_USER} -d ${PGDB_NAME} || exit 1"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_NAME} || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
 
 volumes:
-  pgdb_data:
+  postgres_data:
     driver: local
