--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=Qwerty1@
 POSTGRES_NAME=mozart
 POSTGRES_BACKUP_DIR=C:/ProgramData/docker/postgres-backups
-# connection string = "Host=localhost; Port=5433; Username=admin; Password=Qwerty1@; Database=pgdb;"
+POSTGRES_CONNECTION="Host=localhost; Port=5433; Username=admin; Password=Qwerty1@; Database=mozart;"
 
 # pgadmin
 PGADMIN_EMAIL=admin@admin.admin
@@ -15,4 +15,4 @@ PGADMIN_PASSWORD=Qwerty1@
 
 # mssql
 MSSQL_SA_PASSWORD=Qwerty1@
-# connection string = "Server=localhost, 1434; Database=<your_db_name>; User Id=sa; Password=Qwerty1@; TrustServerCertificate=True;"
+MSSQL_CONNECTION="Server=localhost,1434; Database=mozart; User Id=sa; Password=Qwerty1@; TrustServerCertificate=True;"
