--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ RABBITMQ_PASSWORD=Qwerty1@
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=Qwerty1@
 POSTGRES_NAME=mozart
-POSTGRES_BACKUP_DIR=C:/ProgramData/docker/postgres-backups
+POSTGRES_BACKUP_DIR=./postgres/backup
 POSTGRES_CONNECTION="Host=localhost; Port=5433; Username=admin; Password=Qwerty1@; Database=mozart;"
 
 # pgadmin
