--- a/mssql.yml
+++ b/mssql.yml
@@ -8,6 +8,7 @@ services:
       - mssql_data:/var/opt/mssql
     ports:
       - "1434:1433"
+    restart: unless-stopped
     healthcheck:
       test: [ "CMD", "/opt/mssql-tools/bin/sqlcmd", "-U", "sa", "-P", "${MSSQL_SA_PASSWORD}", "-Q", "select 1" ]
       interval: 30s
