--- a/postgres.yml
+++ b/postgres.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:16.3
+    image: postgres:17.5
     restart: unless-stopped
     ports:
       - "5433:5432"
@@ -10,7 +10,7 @@ services:
       - POSTGRES_DB=${POSTGRES_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ${POSTGRES_BACKUP_DIR}:/var/lib/postgresql/backups
+      - postgres_backups:/var/lib/postgresql/backups
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_NAME} || exit 1"]
       interval: 10s
@@ -20,4 +20,6 @@ services:
 
 volumes:
   postgres_data:
+    driver: local
+  postgres_backups:
     driver: local
