--- a/postgres.yml
+++ b/postgres.yml
@@ -9,8 +9,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_NAME}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - postgres_backups:/var/lib/postgresql/backups
+      - postgres_data:/var/lib/postgresql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_NAME} || exit 1"]
       interval: 10s
@@ -20,6 +19,4 @@ services:
 
 volumes:
   postgres_data:
-    driver: local
-  postgres_backups:
     driver: local
